# multi-SpaM

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  multispam.py
src/: CMakeLists.txt  Makefile  component.cpp  component.hpp  matchfinder.cpp  matchfinder.hpp  mergesort.hpp  multi-SpaM.cpp  options.cpp  options.hpp  pattern.cpp  pattern.hpp  pseudoalignment.cpp  pseudoalignment.hpp  quartetblock.cpp  quartetblock.hpp  randommatchfinder.cpp  randommatchfinder.hpp  raxmlwrapper.hpp  sequence.cpp  sequence.hpp  stats.cpp  stats.hpp  word.cpp  word.hpp
src/consense/: CMakeLists.txt
src/rasbhari/: CMakeLists.txt  patternset.cpp  patternset.h  sensitivity.cpp  sensitivity.h  variance.cpp  variance.h
src/raxml/: CMakeLists.txt  avxLikelihood.c  axml_extract.c  axml_extract.h  evaluateGenericSpecial.c  evaluatePartialGenericSpecial.c  globalVariables.h  makenewzGenericSpecial.c  mem_alloc.c  models.c  newviewGenericSpecial.c  optimizeModel.c  searchAlgo.c
